# haskell-project

Jackpot/: README.MD  jackpotMachine.cabal
Jackpot/app/: Data.hs  Main.hs
Jackpot/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
